# ota-workbench

./: .clang-format  .gitignore  CMakeLists.txt  NOTICE  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml
scripts/: check_spdx_headers.sh
src/: app_config.cpp  app_config.h  crypto.cpp  crypto.h  hash.c  hash.h  log.cpp  log.h  main.cpp  manifest.cpp  manifest.h  release_store.cpp  release_store.h
src/ui/: panels.cpp  panels.h
tests/: test_main.cpp
tests/data/: ec_secp384r1_key.pem  manifest_valid.json
